--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -70,6 +70,7 @@
     "lang_modified": "Modifiziert",
     "lang_name": "Name",
     "lang_networkrules": "Netzwerk-Regeln",
+    "lang_networkrulesIntro": "Hier k\u00f6nnen Sie vordefinierte Regelsets f\u00fcr das Firewalling verwalten. Nutzer der bwLehrpool-Suite k\u00f6nnen auf diese Regelsets zur\u00fcckgreifen, um den Netzwerkzugriff ihrer Veranstaltungen einzuschr\u00e4nken.",
     "lang_networkshares": "Netzlaufwerke",
     "lang_networksharesIntro": "Hier k\u00f6nnen Sie vordefinierte Netzlaufwerke anlegen, die den Nutzern der bwLehrpool-Suite zur Auswahl gestellt werden. Es ist den Nutzern der bwLehrpool-Suite weiterhin m\u00f6glich, komplett eigene Netzwerkfreigaben zu definieren. Die Angaben hier sollen lediglich das Hinzuf\u00fcgen h\u00e4ufig genutzter Laufwerke vereinfachen, bzw. das \u00c4ndern eines Netzwerkpfades vereinfachen, da in diesem Fall nur der Zentrale Eintrag hier angepasst werden muss, und nicht mehr wie zuvor jede Veranstaltung einzeln.",
     "lang_none": "(Keiner)",
@@ -86,6 +87,7 @@
     "lang_reallyResetTemplates": "Sind Sie sicher, dass Sie alle Texte l\u00f6schen und auf die Standardwerte zur\u00fccksetzen wollen?",
     "lang_replaceWithOriginal": "Originaltext in Textbox laden",
     "lang_replyTo": "Reply-To Adresse",
+    "lang_ruleDeleteConfirm": "Soll dieses Regelset wirklich gel\u00f6scht werden?",
     "lang_runScriptAdd": "Skript hinzuf\u00fcgen",
     "lang_runScriptDeleteConfirmation": "Skript wirklich l\u00f6schen?",
     "lang_runtimeConfig": "Laufzeit-Konfiguration",
