--- a/modules-available/dozmod/lang/en/messages.json
+++ b/modules-available/dozmod/lang/en/messages.json
@@ -24,6 +24,8 @@
     "networkshare-saved": "Network share saved",
     "no-expired-images": "No expired VMs",
     "nothing-submitted": "There was nothing submitted",
+    "runscript-invalid-id": "Invalid script id: {{0}}",
+    "runscript-saved": "Script has been saved",
     "runtimelimits-config-saved": "Configuration saved successfully",
     "templates-saved": "Templates saved successfully",
     "timeout": "Timeout",
