--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -28,6 +28,7 @@
     "lang_dozmodLogHeading": "bwLehrpool-Suite action log",
     "lang_editNetworkrule": "Edit Network Rule",
     "lang_editNetworkshare": "Edit Network Share",
+    "lang_editScript": "Edit start script",
     "lang_email": "E-Mail",
     "lang_emailNotifications": "E-Mail notifications enabled",
     "lang_error": "Error",
@@ -37,6 +38,7 @@
     "lang_hasNewer": "newer version exists",
     "lang_hash": "Hash",
     "lang_heading": "Images Marked for Deletion",
+    "lang_hidden": "Hidden",
     "lang_host": "Host",
     "lang_image": "VM",
     "lang_lastEditor": "Edited by",
@@ -63,13 +65,16 @@
     "lang_maxLectureVisibility": "Max time lecture end date may lie in the future (days)",
     "lang_maxLocationsPerLecture": "Max. explicit locations per lecture",
     "lang_maxTransfers": "Max concurrent transfers per user",
+    "lang_minimized": "Minimized",
     "lang_miscOptions": "Misc options",
     "lang_modified": "modified",
     "lang_name": "Name",
     "lang_networkrules": "Network Rules",
+    "lang_networkrulesIntro": "This is where you can create predefined rulesets for the lecture-based firewalling. bwLehrpool-Suite users can select those rulesets to limit network access of their lectures.",
     "lang_networkshares": "Network Shares",
     "lang_networksharesIntro": "This is the list of predefined network shares. bwLehrpool-Suite users can still add custom network shares to their lectures, however having commonly used network shares as predefined entries should be much more convenient. Another advantage is that changing the path of a network share centrally avoids having to edit a dozen lectures' configuration manually.",
     "lang_none": "(none)",
+    "lang_normal": "Normal",
     "lang_organization": "Organization",
     "lang_organizationListHeader": "Set access permissions for organizations",
     "lang_os": "Operating System",
@@ -82,8 +87,23 @@
     "lang_reallyResetTemplates": "Are you sure you want to reset all texts to their default values?",
     "lang_replaceWithOriginal": "load original text into text box",
     "lang_replyTo": "Reply-To address",
+    "lang_ruleDeleteConfirm": "Do you want to delete this ruleset?",
+    "lang_runScriptAdd": "Add run-script",
+    "lang_runScriptDeleteConfirmation": "Do you want to delete this run-script?",
     "lang_runtimeConfig": "Limits and Defaults",
     "lang_runtimeConfigLimits": "Limitations",
+    "lang_scriptContent": "Script content",
+    "lang_scriptExtension": "Script extension",
+    "lang_scriptExtensionHead": "Extension",
+    "lang_scriptIsGlobal": "Global script, will execute in every lecture environment",
+    "lang_scriptIsGlobalHead": "Global",
+    "lang_scriptIsPredefined": "Predefined script, selectable by bwLehrpool-Suite users for individual lectures",
+    "lang_scriptPassCredentials": "Pass username and password to this script",
+    "lang_scriptPassCredentialsHead": "User\/Pass",
+    "lang_scriptVisibility": "Display mode",
+    "lang_scriptVisibilityHead": "Display",
+    "lang_scriptsHead": "Run-scripts for lecture environments",
+    "lang_scriptsIntro": "Here you can define scripts that will either forcefully run at startup of a lecture, or are selectable by bwLehrpool-Suite users.",
     "lang_senderAddress": "Sender address",
     "lang_senderName": "Sender's display name",
     "lang_shareDeleteConfirm": "Do you really want to delete this network share?",
