--- a/modules-available/main/lang/de/categories.json
+++ b/modules-available/main/lang/de/categories.json
@@ -3,6 +3,5 @@
     "content": "Inhalt",
     "settings-client": "Einstellungen (Client)",
     "settings-server": "Einstellungen (Server)",
-    "status": "Status",
-    "users": "Benutzer"
+    "status": "Status"
 }
