--- a/modules-available/main/lang/en/categories.json
+++ b/modules-available/main/lang/en/categories.json
@@ -3,6 +3,5 @@
     "content": "Content",
     "settings-client": "Settings (Client)",
     "settings-server": "Settings (Server)",
-    "status": "Status",
-    "users": "Users"
+    "status": "Status"
 }
