--- a/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp-ipxe/lang/en/template-tags.json
@@ -1,42 +1,75 @@
 {
     "lang_active": "Active",
+    "lang_add": "Add",
     "lang_addBootentry": "Add Bootentry",
     "lang_addMenu": "Add Menu",
+    "lang_additionalInfoLink": "Read more",
+    "lang_archAgnostic": "Architecture-agnostic",
+    "lang_archBoth": "BIOS and EFI",
+    "lang_archSelector": "Select architecture",
+    "lang_assignMenuToLocation": "Assign menu to location",
+    "lang_biosOnly": "BIOS only",
     "lang_bootAddress": "Boot Address of the Server",
-    "lang_bootBehavior": "Default Boot Behavior",
-    "lang_bootentryTitle": "Bootentry",
-    "lang_bootHint": "The Boot menu must be recreated after changing the IP address. Usually this is done automatically, but the process can also be triggered manually in the section of the boot menu.",
-    "lang_bootInfo": "Here adjustments can be made to the appearance of the boot menu.",
-    "lang_bootMenu": "Boot Menu",
-    "lang_bootMenuCreate": "Create Boot Menu",
+    "lang_bootEntryData": "Menu entry data",
+    "lang_bootentryDeleteConfirm": "Are you sure you want to delete this menu item?",
+    "lang_bootentryHead": "Menu items",
+    "lang_bootentryIntro": "This is where you can add, edit and remove menu items, which can be added to menus. A menu entry is either a combination of a kernel\/image to load (and an optional initrd), or a custom iPXE-script.",
+    "lang_bootentryTitle": "Menu item",
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
-    "lang_customEntry": "Custom entry",
-    "lang_bootentryDeleteConfirm": "Are you sure you want to delete this bootentry?",
-    "lang_menuDeleteConfirm": "Are you sure you want to delete this menu?",
-    "lang_downloadImage": "Download USB Image",
+    "lang_commandLine": "Command line",
+    "lang_count": "Count",
+    "lang_downloadBootImage": "Download boot-image",
     "lang_downloadRufus": "Download Rufus",
-    "lang_example": "Example",
+    "lang_editBuiltinWarn": "WARNING! You're editing a predefined item. Future updates might reset your changes!",
+    "lang_editMenuHead": "Edit menu",
+    "lang_efiOnly": "EFI only",
+    "lang_entryChooserTitle": "Select menu item",
+    "lang_entryId": "ID",
+    "lang_entryTitle": "Title",
+    "lang_execAutoUnload": "Unload after execution (--autofree)",
+    "lang_execReplace": "Replace current iPXE stack (--replace)",
+    "lang_execResetConsole": "Reset console before execution",
+    "lang_forceRecompile": "Force recompile",
     "lang_generationFailed": "Could not generate boot menu. The bwLehrpool-System might not work properly. If you can't fix the problem, please report the error log below to the bwLehrpool project.",
+    "lang_hotkey": "Hotkey",
+    "lang_idFormatHint": "(16 chars max, a-z 0-9 - _)",
+    "lang_imageToLoad": "Image to load (e.g. kernel)",
+    "lang_initRd": "Optional initrd\/initramfs to load",
+    "lang_ipxeWikiUrl": "at the iPXE wiki",
     "lang_isDefault": "Default",
     "lang_listOfMenus": "Menulist",
-    "lang_localHDD": "Local HDD",
+    "lang_localBootDefault": "Default method to use for booting from disk",
+    "lang_localBootExceptions": "Exceptions to the local boot method, defined per system model",
+    "lang_localBootHead": "Boot from local disk",
+    "lang_localBootIntro": "There are several methods to trigger a local boot from the iPXE environment. In most cases, the \"AUTO\" setting will work, but with some system models it might be necessary to override the default behavior. In some instances, a BIOS update might resolve the issue as well.",
     "lang_locationCount": "Number of Locations",
-    "lang_masterPassword": "Master Password",
-    "lang_masterPasswordHelp": "The master password is required to edit a boot menu entry. This should be set for security reasons.",
-    "lang_menuCustom": "Custom Extra Menu",
-    "lang_menuCustomHint1": "Here you have the opportunity to add your own menu code to the displayed PXE menu, eg to refer to other PXE server. The format corresponds to the syslinux menu format.",
-    "lang_menuCustomHint2": "You can create one or more entries. If you want to create an entry that starts automatically when the user makes a selection, assign as",
-    "lang_menuCustomHint3": "and select as the default boot behavior custom as well.",
-    "lang_menuDisplayTime": "Menu Display Time",
+    "lang_menuDeleteConfirm": "Are you sure you want to delete this menu?",
+    "lang_menuEntryOverride": "Override default selection",
     "lang_menuGeneration": "Generating boot menu...",
+    "lang_menuListIntro": "This is the list of iPXE menus, with information about assigned locations. You can create, edit and delete additional menus.",
+    "lang_menuTimeout": "Timeout",
     "lang_menuTitle": "Menu",
     "lang_moduleHeading": "iPXE \/ Boot Menu",
-    "lang_pxeBuilt": "Built PXE binary",
+    "lang_newBootEntryHead": "New menu item",
+    "lang_newMenu": "New menu",
+    "lang_none": "(none)",
+    "lang_override": "Override",
+    "lang_recompileHint": "Recompile iPXE binaries now. Usually this happens automatically on changes, but if you suspect problems caused by outdated binaries, you can trigger recompilation here.",
+    "lang_refCount": "References",
+    "lang_referencingMenus": "Referencing menus",
+    "lang_scriptContent": "Script content",
     "lang_seconds": "Seconds",
     "lang_set": "Set",
-    "lang_usbBuilt": "Built USB image",
+    "lang_spacer": "Spacer",
+    "lang_systemmodel": "System model",
+    "lang_title": "Title",
+    "lang_typeExecEntry": "Standardeintrag",
+    "lang_typeScriptEntry": "Custom script",
     "lang_usbImage": "USB image",
     "lang_usbImgHelp": "The USB image can be used to create a bootable USB stick, which enables you to boot bwLehrpool without changing your DHCP settings or enabling network boot in the clients. The only requirement is that you enable USB boot in the client's BIOS. The USB stick is only used for bootstrapping, the actual bwLehrpool system is still loaded via network from your local bwLehrpool server.",
+    "lang_usbImgHelpBtn": "Create bootable thumb drive",
     "lang_usbImgHelpLinux": "On Linux you can simply use dd to write the image to a usb stick. The image already contains a partition table, so make sure you write the image to the device itself and not to an already existing partition (e.g. to \/dev\/sdx not \/dev\/sdx1)",
-    "lang_usbImgHelpWindows": "On Windows you need to use a 3rd party tool that can directly write to usb sticks. There are several free and open source soltions, one of them being Rufus. Rufus has been tested with the bwLehrpool image and is very simple to use. After launching Rufus, just open the downloaded USB image, select the proper USB stick to write to (be careful not to overwrite the wrong drive!), and you're ready to go."
+    "lang_usbImgHelpWindows": "On Windows you need to use a 3rd party tool that can directly write to usb sticks. There are several free and open source soltions, one of them being Rufus. Rufus has been tested with the bwLehrpool image and is very simple to use. After launching Rufus, just open the downloaded USB image, select the proper USB stick to write to (be careful not to overwrite the wrong drive!), and you're ready to go.",
+    "lang_useDefaultMenu": "Inherit from parent location",
+    "lang_useDefaultMenuEntry": "(Menu default)"
 }
