--- a/modules-available/dozmod/lang/de/permissions.json
+++ b/modules-available/dozmod/lang/de/permissions.json
@@ -4,12 +4,12 @@
     "ldapfilters.save": "LDAP Filter speichern.",
     "ldapfilters.view": "LDAP Filter einsehen.",
     "mailconfig.save": "\u00c4nderungen an der SMTP-Konfiguration zum Versenden von Mails speichern.",
-    "networkrules.save": "Netzwerk-Regeln einsehen.",
-    "networkrules.view": "\u00c4nderungen an den Netzwerk-Regeln speichern.",
-    "networkshares.save": "Netzlaufwerke einsehen.",
-    "networkshares.view": "\u00c4nderungen an den Netzlaufwerken speichern.",
-    "runscripts.save": "Startkripte erstellen\/bearbeiten",
-    "runscripts.view": "Startscripte auflisten",
+    "networkrules.save": "\u00c4nderungen an den Netzwerk-Regeln speichern.",
+    "networkrules.view": "Netzwerk-Regeln einsehen.",
+    "networkshares.save": "\u00c4nderungen an den Netzlaufwerken speichern.",
+    "networkshares.view": "Netzlaufwerke einsehen.",
+    "runscripts.save": "Startkripte erstellen\/bearbeiten.",
+    "runscripts.view": "Startscripte auflisten.",
     "runtimeconfig.save": "\u00c4nderungen an der Laufzeit-Konfiguration speichern.",
     "templates.reset": "E-Mail Templates zur\u00fccksetzen.",
     "templates.save": "E-Mail Templates speichern.",
