--- a/modules-available/dozmod/lang/en/module.json
+++ b/modules-available/dozmod/lang/en/module.json
@@ -7,6 +7,7 @@
     "submenu_mailconfig": "email configuration",
     "submenu_networkrules": "Network Rules",
     "submenu_networkshares": "Network Shares",
+    "submenu_runscripts": "Startup scripts",
     "submenu_runtimeconfig": "limits and defaults",
     "submenu_templates": "templates",
     "submenu_users": "users and permissions"
