--- a/modules-available/dozmod/lang/en/permissions.json
+++ b/modules-available/dozmod/lang/en/permissions.json
@@ -4,10 +4,12 @@
     "ldapfilters.save": "Save LDAP filter.",
     "ldapfilters.view": "View LDAP filters. ",
     "mailconfig.save": "Save SMTP configuration for sending mails.",
-    "networkrules.save": "View network rules.",
-    "networkrules.view": "Save network rules.",
-    "networkshares.save": "View network drives.",
-    "networkshares.view": "Save network drives.",
+    "networkrules.save": "Save network rules.",
+    "networkrules.view": "View network rules.",
+    "networkshares.save": "Save network drives.",
+    "networkshares.view": "View network drives.",
+    "runscripts.save": "Save startup scripts.",
+    "runscripts.view": "View startup scripts.",
     "runtimeconfig.save": "Save limits and defaults of a runtime configuration.",
     "templates.reset": "Reset email templates.",
     "templates.save": "Save email templates.",
