[dnbd3] Show image idle time in proxy details

--- a/modules-available/dnbd3/lang/de/template-tags.json
+++ b/modules-available/dnbd3/lang/de/template-tags.json
@@ -62,6 +62,7 @@
     "lang_storageSize": "Speichergr\u00f6\u00dfe",
     "lang_test": "Testen",
     "lang_txTotal": "Gesamt gesendet",
+    "lang_unusedFor": "Ungenutzt",
     "lang_uplink": "Uplink",
     "lang_uptime": "Aktuelle Laufzeit",
     "lang_wantToDelete": "Wollen Sie diesen Server wirklich entfernen? (Rebooten\/Ausschalten muss in diesem Fall manuell vorgenommen werden)"
