[dozmod] Add ServerSideCopy config option

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -106,10 +106,16 @@
     "lang_scriptsIntro": "Hier k\u00f6nnen Sie Startskripte definieren, die entweder global bei jedem Start einer Veranstaltung ausgef\u00fchrt werden, oder den Nutzerinnen der bwLehrpool-Suite zur Vorauswahl zur Verf\u00fcgung gestellt werden.",
     "lang_senderAddress": "Absenderadresse",
     "lang_senderName": "Absender Anzeigename",
+    "lang_serverSideCopy": "Serverseitiges Kopieren",
+    "lang_serverSideCopyDescription": "Wenn aktiviert, werden bei VM-Uploads solche Bl\u00f6cke, die bereits in anderen VM-Abbildern vorhanden sind, nicht erneut vom Client hochgeladen, sondern durch den Satelliten-Server vom verwendeten Fileserver gelesen und kopiert. Abh\u00e4ngig von der Netzwerkinfrastruktur und Hardwareausstattung des Fileservers kann dies den Uploadvorgang merklich beschleunigen. Da diese Funktion allerdings zus\u00e4tzliche I\/O-Last auf dem Fileserver erzeugt, ist ihre Verwendung u.U. nicht erw\u00fcnscht.",
     "lang_shareDeleteConfirm": "Wollen Sie dieses Netzlaufwerk wirklich l\u00f6schen?",
     "lang_size": "Gr\u00f6\u00dfe",
     "lang_spaceWastedDuplication": "Potentiell durch mehrfach vorkommende Bl\u00f6cke belegter Speicherplatz",
     "lang_specificUser": "Spezifischer Nutzer",
+    "lang_sscAuto": "Automatisch (Uploadgeschwindigkeit < 10MB\/s)",
+    "lang_sscOff": "Aus",
+    "lang_sscOn": "An",
+    "lang_sscUser": "Vom Benutzer zuschaltbar",
     "lang_ssl": "SSL-Modus",
     "lang_sslExplicit": "Explizites SSL (\"STARTTLS\")",
     "lang_sslImplicit": "Implizites SSL",
