--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -106,10 +106,16 @@
     "lang_scriptsIntro": "Here you can define scripts that will either forcefully run at startup of a lecture, or are selectable by bwLehrpool-Suite users.",
     "lang_senderAddress": "Sender address",
     "lang_senderName": "Sender's display name",
+    "lang_serverSideCopy": "Server-side copy",
+    "lang_serverSideCopyDescription": "If enabled, the satellite server tries to copy identical chunks that already exist in other virtual machine images, instead of requesting them from the client. Depending on the network infrastructure and file server hardware, this can make uploads of updated images, where the virtual disk contents only changed slightly, significantly faster. However, since this can create significant I\/O load on the file server, this might actually not be desired.",
     "lang_shareDeleteConfirm": "Do you really want to delete this network share?",
     "lang_size": "Size",
     "lang_spaceWastedDuplication": "Potentially wasted space by duplicate blocks",
     "lang_specificUser": "Specific User",
+    "lang_sscAuto": "Auto (upload speed < 10MiB\/s)",
+    "lang_sscOff": "Off",
+    "lang_sscOn": "On",
+    "lang_sscUser": "Controlled by user",
     "lang_ssl": "SSL mode",
     "lang_sslExplicit": "Explicit SSL (\"STARTTLS\")",
     "lang_sslImplicit": "Implicit SSL",
