[dozmod] netrules: Edit set of rules, not single rules

--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -12,10 +12,11 @@
     "ldap-invalid-filter-id": "Ung\u00fcltige LDAP Filter ID",
     "mail-config-saved": "Mail-Konfiguration gespeichert",
     "networkrule-deleted": "Netzwerk-Regel gel\u00f6scht",
+    "networkrule-empty-set": "Leeres Regelset; nicht gespeichert",
     "networkrule-invalid-direction": "Ung\u00fcltige Richtung: {{0}}",
+    "networkrule-invalid-host": "Ung\u00fcltiger Host: {{0}}; Zeile ignoriert",
+    "networkrule-invalid-port": "Ung\u00fcltiger Port: {{0}}; Zeile ignoriert",
     "networkrule-invalid-ruleid": "Nicht-existierende Regel: {{0}}",
-    "networkrule-missing-host": "Fehlende Hostangabe",
-    "networkrule-missing-port": "Fehlende Portangabe",
     "networkrule-saved": "Netzwerk-Regel gespeichert",
     "networkshare-deleted": "Netzlaufwerk gel\u00f6scht",
     "networkshare-invalid-auth-type": "Ung\u00fcltiger Authentifizierungs-Typ: {{0}}",
