--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -1,7 +1,7 @@
 {
     "lang_actionTarget": "Aktionsziel",
     "lang_active": "Aktiv",
-    "lang_addRule": "Netzwerk-Regel hinzuf\u00fcgen",
+    "lang_addRule": "Netzwerkregel hinzuf\u00fcgen",
     "lang_addShare": "Netzlaufwerk hinzuf\u00fcgen",
     "lang_allowLoginByDefault": "Login standardm\u00e4\u00dfig erlauben",
     "lang_allowLoginDescription": "Wenn diese Option aktiviert ist, k\u00f6nnen sich alle Mitarbeiter der Einrichtung \u00fcber die bwLehrpool-Suite anmelden und VMs\/Veranstaltungen verwalten. Wenn Sie diese Option deaktivieren, m\u00fcssen Sie in der Untersektion \"Benutzer und Berechtigungen\" jeden Benutzer nach dem ersten Loginversuch manuell freischalten.",
@@ -26,7 +26,7 @@
     "lang_description_delete_images": "Diese Liste zeigt VMs, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
     "lang_direction": "Richtung",
     "lang_dozmodLogHeading": "bwLehrpool-Suite Aktionslog",
-    "lang_editNetworkrule": "Netzwerk-Regel bearbeiten",
+    "lang_editNetworkrule": "Netzwerkregel bearbeiten",
     "lang_editNetworkshare": "Netzlaufwerk bearbeiten",
     "lang_editScript": "Startscript bearbeiten",
     "lang_email": "EMail",
@@ -69,7 +69,7 @@
     "lang_miscOptions": "Verschiedene Einstellungen",
     "lang_modified": "Modifiziert",
     "lang_name": "Name",
-    "lang_networkrules": "Netzwerk-Regeln",
+    "lang_networkrules": "Netzwerkregeln",
     "lang_networkrulesIntro": "Hier k\u00f6nnen Sie vordefinierte Regelsets f\u00fcr das Firewalling verwalten. Nutzer der bwLehrpool-Suite k\u00f6nnen auf diese Regelsets zur\u00fcckgreifen, um den Netzwerkzugriff ihrer Veranstaltungen einzuschr\u00e4nken.",
     "lang_networkshares": "Netzlaufwerke",
     "lang_networksharesIntro": "Hier k\u00f6nnen Sie vordefinierte Netzlaufwerke anlegen, die den Nutzern der bwLehrpool-Suite zur Auswahl gestellt werden. Es ist den Nutzern der bwLehrpool-Suite weiterhin m\u00f6glich, komplett eigene Netzwerkfreigaben zu definieren. Die Angaben hier sollen lediglich das Hinzuf\u00fcgen h\u00e4ufig genutzter Laufwerke vereinfachen, bzw. das \u00c4ndern eines Netzwerkpfades vereinfachen, da in diesem Fall nur der Zentrale Eintrag hier angepasst werden muss, und nicht mehr wie zuvor jede Veranstaltung einzeln.",
