--- a/modules-available/dozmod/lang/en/messages.json
+++ b/modules-available/dozmod/lang/en/messages.json
@@ -12,10 +12,11 @@
     "ldap-invalid-filter-id": "Invalid LDAP filter id",
     "mail-config-saved": "Mail config saved",
     "networkrule-deleted": "Network rule deleted",
+    "networkrule-empty-set": "Empty ruleset; not saved",
     "networkrule-invalid-direction": "Invalid direction: {{0}}",
+    "networkrule-invalid-host": "Invalid host: {{0}}, ignoring row",
+    "networkrule-invalid-port": "Invalid port: {{0}}, ignoring row",
     "networkrule-invalid-ruleid": "Invalid rule id: {{0}}",
-    "networkrule-missing-host": "Missing host",
-    "networkrule-missing-port": "Missing port",
     "networkrule-saved": "Network rule saved",
     "networkshare-deleted": "Network share deleted",
     "networkshare-invalid-auth-type": "Invalid auth type: {{0}}",
